--- a/index_ch.html
+++ b/index_ch.html
@@ -46,7 +46,7 @@ var _hmt = _hmt || [];
 	        <a href="img/jiguo.png"><img src="img/jiguo.png" alt="Jiguo Li"></a>
 	      </div>
 	      <div class="author-name">黎吉国</div>
-	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。随即获得“上海市超级博士后”激励计划资助。2023年加入京东集团，担任CV/NLP算法工程师。我的研究方向为AIGC相关前言技术及其落地应用，包括大语言模型，图像生成，多/跨模态生成等。</p>
+	      <p>我于2016年毕业于<a href="https://www.hust.edu.cn/">华中科技大学</a>自动化专业并获得学士学位. 2016-2022年在<a href="http://www.ict.ac.cn">中国科学院计算技术研究所</a>计算机应用技术专业攻读博士学位，导师为<a href="http://www.jdl.ac.cn/htm-gaowen/index_en.htm">高文</a>教授, <a href="https://eecs.pku.edu.cn/info/1503/6704.htm">马思伟</a>教授。2022年取得博士学位后加入复旦大学担任博士后研究员，合作导师为<a href="http://www.it.fudan.edu.cn/En/Data/View/1799">郑立荣</a>教授。随即获得“上海市超级博士后”激励计划资助。2023年初加入京东集团，担任CV/NLP算法工程师。2023年11月加入美团，研究大语言模型技术及其应用。我的研究方向为AIGC相关前言技术及其落地应用，包括大语言模型，图像生成，多/跨模态生成等。</p>
 	      <br>
 	      <p style="margin-top: -15pt" >[<a href="paper/jiguo_cv.pdf">简历</a>] 
 	      [<a href="#news">新闻</a>]  
@@ -154,19 +154,19 @@ var _hmt = _hmt || [];
       <span class="border"></span>
     </div>
     <div id = "news-content">
-      <li style="margin: -10px 0px 0px 0px" >Gao Junlong, <strong>Li Jiguo</strong>, Jia Chuanmin, Ma Siwei, Gao Wen. Cross Modal Compression with Variable Rate Prompt[J]. IEEE Transactions on Multimedia(TMM). (Accepted, TMM, SCI, IF 8.182, CCF B)</li>
+      <li style="margin: -10px 0px 0px 0px" >Gao Junlong, <strong>Li Jiguo</strong>, Jia Chuanmin, Ma Siwei, Gao Wen. Cross Modal Compression with Variable Rate Prompt[J]. IEEE Transactions on Multimedia(TMM). (Published, TMM, SCI, IF 8.182, CCF B)</li>
 
       <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, <strong>Li Jiguo</strong>, Wang Shanshe, Mao Qi, Jia Chuanmin, Ma Siwei, Gao Wen. Semantic-Aware Visual Decomposition for Image Coding. International Journal of Computer Vision(IJCV). (Published, IJCV, SCI, IF 11.369, CCF A)</li>
 
       <li style="margin: 10px 0px 0px 0px" >Zhang Pingping, Wang Shiqi, Wang Meng, <strong>Li Jiguo</strong>, Wang Xu, Kwong Sam. Rethinking Semantic Image Compression: Scalable Representation with Cross-modality Transfer[J]. IEEE Transactions on Circuits and Systems for Video Technology (TCSVT). (Published, IEEE TCSVT, SCI, IF 5.859, CCF B)</li>
 
-      <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Accepted, ACM MM, EI, CCF A)</li>
+      <li style="margin: 10px 0px 0px 0px" >Chang Jianhui, Zhang Jian, Youmin Xu, <strong>Li jiguo</strong>, Ma Siwei, Gao Wen, Consistency-Contrast Learning for Conceptual Coding[C]//Proceedings of the 30th ACM International Conference on Multimedia(ACM MM). 2022. (Published, ACM MM, EI, CCF A)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Jia Chuanmin, Zhang Xinfeng, Ma Siwei, Gao Wen. Cross Modal Compression: Towards Human-comprehensible Semantic Compression[C]//Proceedings of the 29th ACM International Conference on Multimedia(ACM MM). 2021: 4230-4238. (Published, EI, CCF A, First Author)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Jia Chuanmin, Xu Jizheng, Zhang Li, Wang Yue, Ma Siwei, Gao Wen. Direct speech-to-image translation[J]. IEEE Journal of Selected Topics in Signal Processing(JSTSP), 2020, 14(3): 517-529. (Published, SCI, IF 7.695, 一作, <a href="https://smallflyingpig.github.io/speech-to-image/main">Homepage</a>)</li>
 
-      <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Xu Jizheng, Ma Siwei, Gao Wen. Learning to Fool the Speaker Recognition[J]. ACM Transactions on Multimedia Computing, Communications, and Applications(TOMM). (Accepted, ACM TOMM, CCF B, SCI, IF 3.275, 一作, <a href="https://smallflyingpig.github.io/speaker-recognition-attacker/main">Homepage</a>)</li>
+      <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Xu Jizheng, Ma Siwei, Gao Wen. Learning to Fool the Speaker Recognition[J]. ACM Transactions on Multimedia Computing, Communications, and Applications(TOMM). (Published, ACM TOMM, CCF B, SCI, IF 3.275, 一作, <a href="https://smallflyingpig.github.io/speaker-recognition-attacker/main">Homepage</a>)</li>
 
       <li style="margin: 10px 0px 0px 0px" ><strong>Li Jiguo</strong>, Zhang Xinfeng, Jia Chuanmin, Xu Jizheng, Zhang Li, Wang Yue, Ma Siwei, Gao Wen. Universal adversarial perturbations generative network for speaker recognition[C]//2020 IEEE International Conference on Multimedia and Expo (ICME). IEEE, 2020: 1-6. (Published, CCF B, EI, 一作, <a href="https://smallflyingpig.github.io/UAPs_for_speaker_recognition/main">Homepage</a>)</li>
 
@@ -290,7 +290,11 @@ var _hmt = _hmt || [];
 
     <div id="content-title" style="margin-top: 5px">
       
-      <h4>奖励荣誉</h4>
+<div id="content-title" style="margin-top: 15px">
+  <span class="border"></span>
+  <span><h2><a name="pub">获奖荣誉</a></h2></span>
+  <span class="border"></span>
+</div>
       <p style="margin-top: -10px">
   <li style="margin: -10px 0px 0px 5px" >2022.12, 获得上海市“超级博士后”激励计划资助。</li>
 	<li style="margin: 10px 0px 0px 5px" >2017.10, 第17届中国虚拟现实大会最佳论文奖。</li>
@@ -301,11 +305,15 @@ var _hmt = _hmt || [];
   <li style="margin: 10px 0px 0px 5px" >2013.08, 全国大学生智能汽车竞赛华南赛区一等奖。</li>
 
 
-      <h4>社会服务</h4>
+  <div id="content-title" style="margin-top: 15px">
+    <span class="border"></span>
+    <span><h2><a name="pub">社会服务</a></h2></span>
+    <span class="border"></span>
+  </div>
         <li style="margin: -10px 0px 0px 5px" >受邀担任以下期刊或会议的审稿人： 
 	  <ol style="margin: 0px 0px 0px 0px" >
             <li>IEEE Transactions on Circuits and Systems for Video Technology (T-CSVT),</li>
-            <li>IEEE MM,</li>
+            <li>IEEE Multimedia,</li>
             <li>IEEE CVPR 2021-2023,</li>
             <li>IEEE ICASSP 2021-2023,</li>
             <li>IEEE ICME 2020-2023,</li>
